# chatroom

./: .gitignore  CMakeLists.txt  a.out  client.cpp  server
include/client/: chat_client.h
include/server/: chat_server.h  client_manager.h  command_handler.h  event_handler.h
src/client/: chat_client.cpp  main.cpp
src/server/: chat_server.cpp  client_manager.cpp  command_handler.cpp  event_handler.cpp  main.cpp
tests/: protocol_test_client.cpp
